@@ -2294,7 +2294,7 @@ Matrix::lssolve (const Matrix& b, octave_idx_type& info,
       // through 3.1.1 when n >= mnthr.  The obtuse formula below
       // should provide sufficient workspace for DGELSD to operate
       // efficiently.
-      if (n >= mnthr)
+      if (n > m && n >= mnthr)
         {
           const octave_idx_type wlalsd
             = 9*m + 2*m*smlsiz + 8*m*nlvl + m*nrhs + (smlsiz+1)*(smlsiz+1);
